Changed the Title and Copyright link in the footer.

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Canis # the main title
+title: Canis的主页 # the main title
 
 tagline: 热爱生活，热爱科技，热爱进步。 # it will display as the sub-title
 
@@ -31,9 +31,6 @@ github:
 twitter:
   username: twitter_username # change to your twitter username
 
-youtube:
-  username: youtube_username # change to your youtube username
-
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
@@ -41,7 +38,6 @@ social:
   email: baishouzangtan@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
     - https://github.com/BlandAlpha # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
